--- a/src/MH/MailBundle/Resources/views/Template/agenda.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/agenda.html.twig
@@ -1,7 +1,130 @@
-<tr>
-    <td class="column_cell one_column list"
-        style="padding: 5px 32px 5px 32px;vertical-align: top;text-align: left;">
-        <p style="font-family: Helvetica, Arial, sans-serif;font-size: medium;line-height: 1.5;margin-top: 5px;margin-bottom: 5px;color: #4c4c4c;">
-            &#10004;&nbsp;&nbsp;{{ post.titre }}</p>
-    </td>
-</tr>
+                    <!-- Début Bloc Agenda ESIEA -->
+
+                    <tr>
+                        <td valign="top" align="center">
+                            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                <tbody>
+                                <tr>
+                                    <td valign="bottom" align="center" style="padding-top: 20px">
+                                        <h2><span style="font-size: medium"><font color="#018ace" face="Arial, Sans Serif">Agenda</font></span></h2>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" align="center">
+                            <table width="100%" cellspacing="0" cellpadding="5" border="0">
+                                <tbody>
+                                <tr>
+                                    <td width="10%" valign="top" align="left">
+                                        <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
+                                            <tbody>
+                                            <tr>
+                                                <td valign="top">
+                                                    <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                        <tbody>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 12px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #ffffff; padding-bottom: 5px; text-align: center; padding-top: 5px; background-color: #0086c7">Janvier</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #0086c7; padding-bottom: 8px; text-align: center; padding-top: 8px; letter-spacing: -1px; line-height: 100%">20</td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><span style="color: rgb(0,134,199)"><a href="http://www.esiea.fr/admission-ecole-ingenieurs/admission-post-bac-ingenieur">Concours Alpha</a></span></b><span style="font-size: small"><b><br />
+                                                        </b></span></font><br />
+                                        <font size="2" face="Arial">                                     <span style="font-size: x-small">D&eacute;but des inscriptions sur APB<br />
+                                                        </span>                                     </font></td>
+                                    <td width="10%" valign="top" align="left">
+                                        <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
+                                            <tbody>
+                                            <tr>
+                                                <td valign="top">
+                                                    <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                        <tbody>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 12px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #ffffff; padding-bottom: 5px; text-align: center; padding-top: 5px; background-color: #0086c7">Mars</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #0086c7; padding-bottom: 8px; text-align: center; padding-top: 8px; letter-spacing: -1px; line-height: 100%">12</td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="http://www.esiea.fr/ecole-ingenieurs/journees-portes-ouvertes-esiea#1&amp;#utm_source=oscar&amp;utm_medium=newsletter&amp;utm_campaign=NLnov15">Journ&eacute;e Portes Ouvertes<br />
+                                                </a></b></font><br />
+                                        <span style="font-family: Arial"><span style="font-size: x-small">Campus de Paris</span></span></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" align="center">
+                            <table width="100%" cellspacing="0" cellpadding="5" border="0">
+                                <tbody>
+                                <tr>
+                                    <td width="10%" valign="top" align="left">
+                                        <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
+                                            <tbody>
+                                            <tr>
+                                                <td valign="top">
+                                                    <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                        <tbody>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 12px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #ffffff; padding-bottom: 5px; text-align: center; padding-top: 5px; background-color: #0086c7">F&eacute;vrier</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #0086c7; padding-bottom: 8px; text-align: center; padding-top: 8px; letter-spacing: -1px; line-height: 100%">27</td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="http://www.esiea.fr/ecole-ingenieurs/journees-portes-ouvertes-esiea#2&amp;utm_source=oscar&amp;utm_medium=newsletter&amp;utm_campaign=NLnov15">Journ&eacute;e Portes Ouvertes<br />
+                                                </a></b></font><br />
+                                        <span style="font-family: Arial"><span style="font-size: x-small">Campus de Laval</span></span></td>
+                                    <td width="10%" valign="top" align="left">
+                                        <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
+                                            <tbody>
+                                            <tr>
+                                                <td valign="top">
+                                                    <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                        <tbody>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 12px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #ffffff; padding-bottom: 5px; text-align: center; padding-top: 5px; background-color: #0086c7">Mars</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td valign="top" align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #0086c7; padding-bottom: 8px; text-align: center; padding-top: 8px; letter-spacing: -1px; line-height: 100%">02</td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="http://www.esiea.fr/25-fevrier-2015-journee-dimmersion-vis-vie-dingenieur-campus-paris/#utm_source=oscar&amp;utm_medium=newsletter&amp;utm_campaign=NLnov15">Vis ma vie d'ing&eacute;nieur<br />
+                                                </a></b></font><br />
+                                        <span style="font-family: Arial"><span style="font-size: x-small">1&egrave;re journ&eacute;e d'immersion sur le campus de Paris</span></span></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+
+                    <!-- Fin Bloc Agenda ESIEA -->
