--- a/src/MH/MailBundle/Resources/views/Template/mail.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/mail.html.twig
@@ -37,6 +37,12 @@
 
         <!-- ICI ON AJOUTE DES BLOCS TR AVEC UN TD DEDANS MAX -->
 
+        {% include "MHMailBundle:Template:header.html.twig" ignore missing %}
+
+        {% include "MHMailBundle:Template:agenda.html.twig" ignore missing %}
+
+        {% include "MHMailBundle:Template:footer-reseausociaux.html.twig" ignore missing %}
+
         <!-- Fin du tableau -->
         </tbody>
       </table>
